mention RDNZL, CL-GD, CL-PPCRE

--- a/resources.html
+++ b/resources.html
@@ -270,6 +270,15 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   [<a href=" mailto:emarsden@laas.fr">Eric Marsden</a>]</dt>
  <dd><a href="http://purl.org/net/emarsden/home/downloads/"
         >http://purl.org/net/emarsden/home/downloads/</a></dd>
+ <dt><strong>RDNZL</strong> - A .NET layer for Common Lisp
+  [<a href="http://weitz.de/">Edi Weitz</a>]</dt>
+ <dd><a href="http://weitz.de/rdnzl/">http://weitz.de/rdnzl/</a></dd>
+ <dt><strong>CL-GD</strong> - Use the GD Graphics Library
+  [<a href="http://weitz.de/">Edi Weitz</a>]</dt>
+ <dd><a href="http://weitz.de/cl-gd/">http://weitz.de/cl-gd/</a></dd>
+ <dt><strong>CL-PPCRE</strong> - portable Perl-compatible regular expressions
+  [<a href="http://weitz.de/">Edi Weitz</a>]</dt>
+ <dd><a href="http://weitz.de/cl-ppcre/">http://weitz.de/cl-ppcre/</a></dd>
 </dl>
 
 <p>See also the
