--- a/resources.html
+++ b/resources.html
@@ -279,6 +279,11 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>CL-PPCRE</strong> - portable Perl-compatible regular expressions
   [<a href="http://weitz.de/">Edi Weitz</a>]</dt>
  <dd><a href="http://weitz.de/cl-ppcre/">http://weitz.de/cl-ppcre/</a></dd>
+ <dt><strong>Qi</strong> - A language implemented in Common Lisp that
+  generates efficient type secure Lisp programs which you can run on any
+  machine [<a href="dr.mtarver@ukonline.co.uk">Mark Tarver</a>]</dt>
+ <dd><a href="http://www.lambdassociates.org/"
+        >http://www.lambdassociates.org/</a></dd>
 </dl>
 
 <p>See also the
