link to CLUE/CLIO

--- a/resources.html
+++ b/resources.html
@@ -284,6 +284,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   machine [<a href="dr.mtarver@ukonline.co.uk">Mark Tarver</a>]</dt>
  <dd><a href="http://www.lambdassociates.org/"
         >http://www.lambdassociates.org/</a></dd>
+ <dt><strong>CLUE/CLIO</strong></dt>
+ <dd><a href="http://www.cliki.net/CLUE">http://www.cliki.net/CLUE</a>,
+  <a href="http://www.cliki.net/CLIO">http://www.cliki.net/CLIO</a></dd>
 </dl>
 
 <p>See also the
