http://agentsheets.com/lisp/XMLisp/

--- a/resources.html
+++ b/resources.html
@@ -287,6 +287,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>CLUE/CLIO</strong></dt>
  <dd><a href="http://www.cliki.net/CLUE">http://www.cliki.net/CLUE</a>,
   <a href="http://www.cliki.net/CLIO">http://www.cliki.net/CLIO</a></dd>
+ <dt><strong>XMLisp</strong> - integration of Lisp with XML</dt>
+ <dd><a href="http://agentsheets.com/lisp/XMLisp/"
+        >http://agentsheets.com/lisp/XMLisp/</a></dd>
 </dl>
 
 <p>See also the
