mention http://www.cs.umu.se/~mjm/step/

--- a/resources.html
+++ b/resources.html
@@ -285,6 +285,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>XMLisp</strong> - integration of Lisp with XML</dt>
  <dd><a href="http://agentsheets.com/lisp/XMLisp/"
         >http://agentsheets.com/lisp/XMLisp/</a></dd>
+ <dt><strong>Step</strong> - natural language interface to relational databases
+  [<a href="http://www.cs.umu.se/~mjm">Michael Minock</a>]</dt>
+ <dd><a href="http://www.cs.umu.se/~mjm/step/"
+        >http://www.cs.umu.se/~mjm/step/</a></dd>
 </dl>
 
 <p>See also the
