--- a/resources.html
+++ b/resources.html
@@ -253,9 +253,13 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dd><a href="http://www.peter-herth.de/ltk/"
         >http://www.peter-herth.de/ltk/</a></dd>
  <dt><strong><a href="http://uffi.b9.com/">UFFI</a></strong>
-  [<a href="http://www.informatimago.com/">Pascal Bourguignon</a>]</dt>
- <dd><a href="http://www.informatimago.com/develop/lisp/"
-        >http://www.informatimago.com/develop/lisp/</a></dd>
+  [<a href="http://b9.com/">Kevin Rosenberg</a>]</dt>
+ <dd><ul><li><a href="http://www.informatimago.com/develop/lisp/"
+                >http://www.informatimago.com/develop/lisp/</a>
+    [<a href="http://www.informatimago.com/">Pascal Bourguignon</a>]</li>
+   <li><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1028683&amp;group_id=1355&amp;atid=301355">CLISP patch 1028683</a>
+    [<a href="mailto:Joerg-Cyril.Hoehle@t-systems.com">Joerg Hoehle</a>]</li>
+ </ul></dd>
  <dt><strong>ODBC</strong> [Andreas Thiele]</dt>
  <dd><a href="http://www.atp-media.de/odbc-cl/odbc.zip"
         >http://www.atp-media.de/odbc-cl/odbc.zip</a></dd>
