--- a/summary.html
+++ b/summary.html
@@ -30,18 +30,26 @@ It supports the Lisp described in the
 standard</a> plus many extensions.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> includes an interpreter,
-a compiler, a debugger,
-a <a href="http://www.lisp.org/mop/">MOP</a>ish
- <a href="http://www.lisp.org/HyperSpec/Body/chap-7.html">CLOS</a>
- implementation,
-a <a href="impnotes.html#dffi">foreign language interface</a> and
-a <a href="impnotes.html#socket">socket interface</a>.
+a <a href="impnotes/bytecode.html">compiler</a>,
+a <a href="impnotes/debugger.html">debugger</a>,
+<a href="http://www.lisp.org/HyperSpec/Body/chap-7.html">CLOS</a>,
+<a href="impnotes/mop-chap.html">MOP</a>,
+a <a href="impnotes/dffi.html">foreign language interface</a>,
+<a href="impnotes/i18n-mod.html">i18n</a>,
+<a href="impnotes/regexp-mod.html">regular expressions</a>,
+a <a href="impnotes/socket.html">socket interface</a>,
+and <a href="impnotes/extensions.html">more</a>.
 An <a href="http://www.the-labs.com/X11/XLib-Manual/">X11</a> interface
-is available through <a href="http://www.cliki.net/CLX">CLX</a> and
-<a href="http://garnetlisp.sf.net/">Garnet</a>.
+is available through <a href="http://www.cliki.net/CLX">CLX</a>,
+<a href="http://garnetlisp.sf.net/">Garnet</a> and
+<a href="http://www.cliki.net/CLUE">CLUE</a>/<a href="http://www.cliki.net/CLIO">CLIO</a>.
 Command line editing is provided by
 <a href="http://cnswww.cns.cwru.edu/~chet/readline/rltop.html"
-   >readline</a>.</p>
+   >readline</a>.
+<a href="http://clisp.cons.org/">CLISP</a> runs
+<a href="http://maxima.sourceforge.net/">Maxima</a>,
+<a href="http://www.cs.utexas.edu/users/moore/acl2/">ACL2</a>
+and <a href="resources.html">many other Common Lisp packages</a>.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> runs on
  most Unix workstations (Linux, FreeBSD, NetBSD, OpenBSD, Solaris,
