--- a/faq.html
+++ b/faq.html
@@ -243,14 +243,8 @@ promotes charitable donations to Uganda.</p>
 <h3 id="mailing-lists">Which mailing lists should I subscribe to?</h3>
 
 <p>Cross-posting in the CLISP mailing lists is very actively discouraged
-<<<<<<< variant A
  and is virtually non-existent, thus you can subscribe to all mailing
  lists that are relevant to you without getting duplicate messages:</p>
->>>>>>> variant B
- and is virtually non-existent, thus you can subscribe to all
- mailing lists that are relevant to you without getting duplicate
- messages:</p>
-======= end
 <dl>
  <dt><a href="http://lists.sourceforge.net/lists/listinfo/clisp-announce"
         >&lt;clisp-announce&gt;</a></dt>
@@ -480,6 +474,7 @@ character #\u00B3 cannot be represented in the character set CHARSET:ASCII</a></
  <li><a href="#self-mod">self-modifying code</a> - a common
   CLISP-independent beginner mistake</li>
  <li><a href="#autoconf">autoconf problems during build</a></li>
+ <li><a href="#fp">floating point arithmetics is broken</a></li>
  <li><a href="#other-problem">function <code>FOO</code> is broken!</a></li>
 </ol>
 <hr/>
@@ -612,6 +607,31 @@ trying to <a href="http://www.lisp.org/HyperSpec/Body/fun_nconc.html"
  Please just <code>touch</code> the target, e.g.:</p><pre>
 $ touch src/configure
 </pre><p>and re-<code>make</code>.</p>
+
+<p><a href="#trouble">back to Troubles</a></p><hr/>
+
+<h3 id="fp">floating point arithmetics is broken</h3>
+
+<pre>
+ [1]&gt; (- 1.1 0.9)
+0.20000005
+</pre>
+
+<p>This not a bug, at least not a bug in CLISP.
+ You may argue that this is a bug in
+ <a href="http://grouper.ieee.org/groups/754/">IEEE 754</a>,
+ but first make sure that you do know
+ <a href="http://docs.sun.com/source/806-3568/ncg_goldberg.html">What
+ Every Computer Scientist Should Know About Floating-Point Arithmetic</a>.</p>
+
+<p>See also <a href="http://sourceforge.net/mailarchive/message.php?msg_id=12445006">this message</a> in
+ <a href="http://lists.sourceforge.net/lists/listinfo/clisp-list"
+    >&lt;clisp-list&gt;</a>.</p>
+
+<p>PS. If you want <em>exact</em> calculations, use rationals:</p><pre>
+ [1]&gt; (- 11/10 9/10)
+1/5
+</pre>
 
 <p><a href="#trouble">back to Troubles</a></p><hr/>
 
