--- a/faq.html
+++ b/faq.html
@@ -496,7 +496,13 @@ character #\u00B3 cannot be represented in the character set CHARSET:ASCII</h3>
  (like <code>LOAD</code>, <code>DIRECTORY</code> etc)
  will raise this error.
  Note that <code>LOAD</code> will traverse the directories mentioned in
- <a href="#load-paths"><code>CUSTOM:*LOAD-PATHS*</code></a>.</p>
+ <a href="#load-paths"><code>CUSTOM:*LOAD-PATHS*</code></a>.
+ This applies to the <a href="#rc">init file</a> too.
+ You will need to set
+ <a href="impnotes.html#term-enc"><code>CUSTOM:*PATHNAME-ENCODING*</code></a>
+ or pass <a href="clisp.html#opt-enc"><code>-E</code></a> to CLISP.
+ Using a "1:1" encoding, such as <code>charset:iso-8859-1</code>,
+ should help you avoid this error.</p>
 
 <p>Note that this error may be signaled by the Print part of the
  Read-Eval-Print Loop and <em>not</em> by the function you call.
@@ -509,9 +515,7 @@ character #\u00B3 cannot be represented in the character set CHARSET:ASCII</h3>
   (setq l (read-line s))
   nil)
 </pre><p>CLISP will just print <code>NIL</code> and signal the error
- when you type <code>l</code>.  You will need to set
- <a href="impnotes.html#term-enc"><code>CUSTOM:*PATHNAME-ENCODING*</code></a>
- or pass <a href="clisp.html#opt-enc"><code>-E</code></a> to CLISP.</p>
+ when you type <code>l</code>.</p>
 
 <p><a href="#trouble">back to Troubles</a></p><hr/>
 
