ask for help with octave module

--- a/wanted.html
+++ b/wanted.html
@@ -57,6 +57,13 @@ members to recruit new members, with the following incentives:</p>
 <h3 id="new">New features</h3>
 
 <ol>
+ <li>CLISP offers a <a href="impnotes/matlab.html">module</a> that
+  interfaces to Matlab but no module that interfaces to
+  <a href="http://www.octave.org">Octave</a> - the free replacement to Matlab.
+  This is ideologically intolerable to the GNU party committee (despite the
+  fact that Octave does not offer a C API yet), so you are hereby invited to
+  volunteer to implement the Matlab C API for Octave and then make sure that
+  the CLISP matlab module works with that new Octave C API.</li>
  <li>multi-threading (see
   <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/xthread.d"><code>src/xthread.d</code></a>,
   <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/zthread.d"><code>src/zthread.d</code></a>,
