--- a/wanted.html
+++ b/wanted.html
@@ -79,7 +79,7 @@ members to recruit new members, with the following incentives:</p>
   (<a href="http://www.informatimago.com/develop/lisp/"> Pascal
    Bourguignon is working on this</a>)<p><br/></p></li>
  <li>GUI (e.g.,
-  <a href="http://sourceforge.net/projects/wxlisp/">wxCL</a>)<p><br/></p></li>
+  <a href="http://sourceforge.net/projects/wxcl/">wxCL</a>)<p><br/></p></li>
  <li><a href="http://www.openssl.org/">SSL</a> bindings (note
   <a href="http://packages.debian.org/unstable/devel/cl-ssl">cl-ssl</a>)
   <p><br/></p></li>
@@ -88,6 +88,15 @@ members to recruit new members, with the following incentives:</p>
      >gnome-config</a> support in
   <a href="impnotes.html#dir-key">modules/dirkey</a><p><br/></p></li>
 </ol>
+
+<h3 id="infrastructure">Infrastructure</h3>
+
+<ol>
+ <li>Bring the CLISP build infrastructure up to the latest autoconf.
+  Specifically, eliminate the annoying warnings produced by the top-level
+  <code>make -f Makefile.devel check-configures</code><p><br/></p></li>
+</ol>
+
 
 <h3 id="rfe">See also</h3>
 
