--- a/resources.html
+++ b/resources.html
@@ -392,11 +392,10 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
    seamless interface to C, a huge numerical library, a GUI toolkit,
    and bindings to GSL, SDL, OpenGL, V4l, and others.</dd>
  <dt><strong>wxCL = wxWindows + Common Lisp</strong>
-  [<a href="http://sourceforge.net/projects/wxlisp/">project</a>
-   <a href="http://wxlisp.sourceforge.net/">home</a>]</dt>
- <dd>wxCL is an attempt to create Lisp bindings to the
-  <a href="http://www.wxwindows.org/">wxWindows</a> API.
-  It is still in its infancy and requires C, C++ and Lisp hackers.</dd>
+  [<a href="http://sourceforge.net/projects/wxcl/">project</a>
+   <a href="http://www.wxcl-project.org/">home</a>]</dt>
+ <dd>Lisp bindings to the <a href="http://www.wxwindows.org/">wxWindows</a> API.
+  It uses <a href="#swig">SWIG</a>.</dd>
  <dt><strong>GClisp = CLISP + GTK+</strong>
   [<a href="http://sourceforge.net/projects/gclisp/">project</a>
    <a href="http://gclisp.sourceforge.net/">home</a>]</dt>
@@ -407,7 +406,7 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
    <a href="http://jabberwocky.sourceforge.net/">home</a>]</dt>
  <dd>A Lisp IDE: includes a Lisp-aware editor, a source level debugger
   and a way to interact with Lisp processes.</dd>
- <dt><strong>SWIG</strong>
+ <dt id="swig"><strong>SWIG</strong>
   [<a href="http://sourceforge.net/projects/swig/">project</a>
    <a href="http://www.swig.org/">home</a>]</dt>
  <dd><cite>Simplified Wrapper and Interface Generator</cite>: A compiler
