http://common-lisp.net/project/phemlock/

--- a/resources.html
+++ b/resources.html
@@ -232,7 +232,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>Portable Hemlock</strong> - CL-based Emacs-like editor
   [<a href="mailto:unk6@stud.uni-karlsruhe.de">Gilbert Baumann</a>]</dt>
  <dd><a href="http://www.stud.uni-karlsruhe.de/~unk6/hemlock/"
-        >http://www.stud.uni-karlsruhe.de/~unk6/hemlock/</a></dd>
+        >http://www.stud.uni-karlsruhe.de/~unk6/hemlock/</a>
+  <a href="http://common-lisp.net/project/phemlock/"
+     >http://common-lisp.net/project/phemlock/</a></dd>
  <dt><strong>Closure Web Browser</strong>
   [<a href="mailto:unk6@stud.uni-karlsruhe.de">Gilbert Baumann</a>]</dt>
  <dd><a href="http://www.stud.uni-karlsruhe.de/~unk6/closure/"
