http://common-lisp.net/project/cffi/

--- a/resources.html
+++ b/resources.html
@@ -262,6 +262,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
    <li><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1028683&amp;group_id=1355&amp;atid=301355">CLISP patch 1028683</a>
     [<a href="mailto:Joerg-Cyril.Hoehle@t-systems.com">Joerg Hoehle</a>]</li>
  </ul></dd>
+ <dt><strong>CFFI</strong> - The Common Foreign Function Interface
+  [<a href="mailto:jamesjb@jamesjb.com">James Bielman</a>]</dt>
+ <dd><a href="http://common-lisp.net/project/cffi/"
+        >http://common-lisp.net/project/cffi/</a></dd>
  <dt><strong>ODBC</strong> [Andreas Thiele]</dt>
  <dd><a href="http://www.atp-media.de/odbc-cl/odbc.zip"
         >http://www.atp-media.de/odbc-cl/odbc.zip</a></dd>
