--- a/summary.html
+++ b/summary.html
@@ -66,8 +66,8 @@ You may distribute commercial proprietary applications compiled with
 CLISP, see file
 <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/clisp/clisp/COPYRIGHT"><code>COPYRIGHT</code></a> in the CLISP distribution.</p>
 
-<p>The user interface comes in German, English, French, Spanish,
-Dutch and Russian, and can be changed at run time.</p>
+<p>The user interface comes in English, German, French, Spanish,
+Dutch, Russian and Danish, and can be changed at run time.</p>
 
 <hr/>
 <table width="100%"><tr><td align="left">
