http://common-lisp.net/project/plain-odbc

--- a/resources.html
+++ b/resources.html
@@ -269,6 +269,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>ODBC</strong> [Andreas Thiele]</dt>
  <dd><a href="http://www.atp-media.de/odbc-cl/odbc.zip"
         >http://www.atp-media.de/odbc-cl/odbc.zip</a></dd>
+ <dt><strong>plain-odbc</strong>
+  [<a href="mailto:roland.averkamp@gmx.net">Roland Averkamp</a>]</dt>
+ <dd><a href="http://common-lisp.net/project/plain-odbc"
+        >http://common-lisp.net/project/plain-odbc</a></dd>
  <dt><strong>pg-dot-lisp</strong> socket-level interface to the
   <a href="http://www.postgresql.org/">PostgreSQL</a>
   object-relational DBMS
