http://www.gtk-server.org/

--- a/resources.html
+++ b/resources.html
@@ -245,7 +245,8 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
         >http://ccrma.stanford.edu/software/cmn/</a></dd>
  <dt><strong>The GTK-server</strong></dt>
  <dd><a href="http://www.turtle.dds.nl/gtk-server/"
-        >http://www.turtle.dds.nl/gtk-server/</a></dd>
+        >http://www.turtle.dds.nl/gtk-server/</a><br/>
+  <a href="http://www.gtk-server.org/">http://www.gtk-server.org/</a></dd>
  <dt><strong>Bergman</strong> - a system for computations in commutative
   and purely non-commutative graded algebras</dt>
  <dd><a href="http://servus.math.su.se/bergman/"
