Verrazano - A Bridge Between C++ and Lisp http://common-lisp.net/project/fetter/

--- a/resources.html
+++ b/resources.html
@@ -307,6 +307,9 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>GBBopen</strong> - high-performance blackboard system
   [<a href="http://www.cs.umass.edu/~corkill">Dan Corkill</a>]</dt>
  <dd><a href="http://gbbopen.org/">http://gbbopen.org/</a></dd>
+ <dt><strong>Verrazano</strong> - A Bridge Between C++ and Lisp</dt>
+ <dd><a href="http://common-lisp.net/project/fetter/"
+        >http://common-lisp.net/project/fetter/</a></dd>
 </dl>
 
 <p>See also the
