http://www.lisperati.com/logo.html

--- a/resources.html
+++ b/resources.html
@@ -45,6 +45,9 @@
          >http://www.niksula.cs.hut.fi/~tsiivola/clisp-ffi-howto.html</a><br/>
    a short non-authoritative guide to extending CLISP on Debian via
    its FFI and module facilities</dd>
+ <dt>Lisp logos</dt>
+ <dd><a href="http://www.lisperati.com/logo.html"
+        >http://www.lisperati.com/logo.html</a></dd>
 </dl>
 
 <h1 id="about">About Lisp in general</h1>
