Mark Carter http://www.markcarter.me.uk/computing/lisp/lisp.htm

--- a/resources.html
+++ b/resources.html
@@ -45,7 +45,11 @@
          >http://www.niksula.cs.hut.fi/~tsiivola/clisp-ffi-howto.html</a><br/>
    a short non-authoritative guide to extending CLISP on Debian via
    its FFI and module facilities</dd>
- <dt>Lisp logos</dt>
+ <dt><strong>CLISP programming - by a newbie, for newbies</strong>
+  [Mark Carter]</dt>
+ <dd><a href="http://www.markcarter.me.uk/computing/lisp/lisp.htm"
+        >http://www.markcarter.me.uk/computing/lisp/lisp.htm</a></dd>
+ <dt><strong>Lisp logos</strong></dt>
  <dd><a href="http://www.lisperati.com/logo.html"
         >http://www.lisperati.com/logo.html</a></dd>
 </dl>
