http://wikihost.org/wikis/lisplogogreate/

--- a/resources.html
+++ b/resources.html
@@ -51,7 +51,9 @@
         >http://www.markcarter.me.uk/computing/lisp/lisp.htm</a></dd>
  <dt><strong>Lisp logos</strong></dt>
  <dd><a href="http://www.lisperati.com/logo.html"
-        >http://www.lisperati.com/logo.html</a></dd>
+        >http://www.lisperati.com/logo.html</a><br/>
+  <a href="http://wikihost.org/wikis/lisplogogreate/"
+     http://wikihost.org/wikis/lisplogogreate/></a></dd>
 </dl>
 
 <h1 id="about">About Lisp in general</h1>
