--- a/resources.html
+++ b/resources.html
@@ -52,8 +52,10 @@
  <dt><strong>Lisp logos</strong></dt>
  <dd><a href="http://www.lisperati.com/logo.html"
         >http://www.lisperati.com/logo.html</a><br/>
+  <a href="http://www.normal-null.de/lisp_logo.html"
+     >http://www.normal-null.de/lisp_logo.html</a><br/>
   <a href="http://wikihost.org/wikis/lisplogogreate/"
-     http://wikihost.org/wikis/lisplogogreate/></a></dd>
+     >http://wikihost.org/wikis/lisplogogreate/></a></dd>
 </dl>
 
 <h1 id="about">About Lisp in general</h1>
@@ -319,6 +321,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
  <dt><strong>Verrazano</strong> - A Bridge Between C++ and Lisp</dt>
  <dd><a href="http://common-lisp.net/project/fetter/"
         >http://common-lisp.net/project/fetter/</a></dd>
+ <dt><strong>AP5</strong> - an extension to CL which allows users to
+  "program" at a more "specificational" level
+  [<a href="mailto:don@isis.cs3-inc.com">Don Cohen</a>]</dt>
+ <dd><a href="http://ap5.com/">http://ap5.com/</a></dd>
 </dl>
 
 <p>See also the
