grid@bmk.com.au - Simple Grid Protocol - http://grid.bmk.com.au/

--- a/resources.html
+++ b/resources.html
@@ -325,6 +325,11 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   "program" at a more "specificational" level
   [<a href="mailto:don@isis.cs3-inc.com">Don Cohen</a>]</dt>
  <dd><a href="http://ap5.com/">http://ap5.com/</a></dd>
+ <dt><strong>sgp</strong> - Simple Grid Protocol:
+  Allows computer programs to utilize the unused CPU resources of other
+  computers on a network or the Internet.
+  [<a href="mailto:grid@bmk.com.au">grid@bmk.com.au</a>]</dt>
+ <dd><a href="http://grid.bmk.com.au/">http://grid.bmk.com.au/</a></dd>
 </dl>
 
 <p>See also the
