http://freeweb.lombardiacom.it/daddio_Home/scheme/lisp-escher-lambda.svg

--- a/resources.html
+++ b/resources.html
@@ -50,12 +50,13 @@
  <dd><a href="http://www.markcarter.me.uk/computing/lisp/lisp.htm"
         >http://www.markcarter.me.uk/computing/lisp/lisp.htm</a></dd>
  <dt><strong>Lisp logos</strong></dt>
- <dd><a href="http://www.lisperati.com/logo.html"
-        >http://www.lisperati.com/logo.html</a><br/>
-  <a href="http://www.normal-null.de/lisp_logo.html"
-     >http://www.normal-null.de/lisp_logo.html</a><br/>
-  <a href="http://wikihost.org/wikis/lisplogogreate/"
-     >http://wikihost.org/wikis/lisplogogreate/></a></dd>
+ <dd><ul><li><a href="http://www.lisperati.com/logo.html"
+                >http://www.lisperati.com/logo.html</a></li>
+   <li><a href="http://www.normal-null.de/lisp_logo.html"
+          >http://www.normal-null.de/lisp_logo.html</a></li>
+   <li><a href="http://freeweb.lombardiacom.it/daddio_Home/scheme/lisp-escher-lambda.svg">http://freeweb.lombardiacom.it/daddio_Home/scheme/lisp-escher-lambda.svg</a></li>
+   <li><a href="http://wikihost.org/wikis/lisplogogreate/"
+          >http://wikihost.org/wikis/lisplogogreate/</a></li></ul></dd>
 </dl>
 
 <h1 id="about">About Lisp in general</h1>
