show sokoban demo

--- a/propaganda.html
+++ b/propaganda.html
@@ -83,6 +83,13 @@
                        src="fibjap-xterm.png" width="507" height="744"/></p>
  <p>(also <a href="fibjap-emacs.png">edited in GNU Emacs</a>).</p>
 
+<h2 id="clx">CLISP and CLX</h2>
+
+<p>Here is a demo of the CLISP new-clx module (with the xshape
+ extension):</p>
+<p class="center"><img alt="CLISP new-clx sokoban (xshape extension)"
+                       src="new-clx-sokoban.png" width="768" height="587"/></p>
+
 <h2>CLISP Performance</h2>
 
 <p>CLISP compares well with other ANSI CL implementations with respect
