GNU is not UNIX

--- a/summary.html
+++ b/summary.html
@@ -52,7 +52,7 @@ Command line editing is provided by
 and <a href="resources.html">many other Common Lisp packages</a>.</p>
 
 <p><a href="http://clisp.cons.org/">CLISP</a> runs on
- most Unix workstations (Linux, FreeBSD, NetBSD, OpenBSD, Solaris,
+ most GNU and Unix systems (Linux, FreeBSD, NetBSD, OpenBSD, Solaris,
  Tru64, HP-UX, BeOS, NeXTstep, IRIX, AIX and others) and on
  other systems (Windows NT/2000/XP, Windows 95/98/ME)
  and needs only 4 MB of RAM.</p>
