SimLab http://www.cs.cornell.edu/Info/Projects/SimLab/

--- a/resources.html
+++ b/resources.html
@@ -331,6 +331,10 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   computers on a network or the Internet.
   [<a href="mailto:grid@bmk.com.au">grid@bmk.com.au</a>]</dt>
  <dd><a href="http://grid.bmk.com.au/">http://grid.bmk.com.au/</a></dd>
+ <dt><strong>SimLab</strong> - computer tools for analysis and simulation
+  [<a href="mailto:chew@cs.cornell.edu">Paul Chew</a>]</dt>
+ <dd><a href="http://www.cs.cornell.edu/Info/Projects/SimLab/"
+        >http://www.cs.cornell.edu/Info/Projects/SimLab/</a></dd>
 </dl>
 
 <p>See also the
