The Common Lisp Directory and Knowledge Base - http://www.cl-user.net/

--- a/resources.html
+++ b/resources.html
@@ -109,6 +109,11 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
  a collection of links to and resources for free software implemented in
  Common Lisp and available on Unix-like systems.</p>
 
+<p><a href="http://www.cl-user.net/">The Common Lisp Directory</a>
+ is intended to be a resource for Common Lisp users who are invited to
+ post mostly Lisp related links into the LinkIt section and use/comment
+ the Directory and Knowledge Base in the Directory section.</p>
+
 <p><a href="http://www.paulgraham.com/lisplinks.html">Lisp Links</a> and
  <a href="http://www.paulgraham.com/diff.html">What Made Lisp Different</a>
  [<a href="http://www.paulgraham.com/">Paul Graham</a>]</p>
