update UFFI link; point to Joerg's patches

--- a/wanted.html
+++ b/wanted.html
@@ -74,10 +74,11 @@ members to recruit new members, with the following incentives:</p>
   (e.g., <a href="http://www.southern-storm.com.au/libjit.html">libjit</a>)
   <p><br/></p></li>
  <li>compilation to JVM<p><br/></p></li>
- <li><a href="http://uffi.med-info.com/">UFFI</a> compatibility
-  for CLISP <a href="impnotes.html#dffi">FFI</a>
-  (<a href="http://www.informatimago.com/develop/lisp/"> Pascal
-   Bourguignon is working on this</a>)<p><br/></p></li>
+ <li><a href="http://uffi.b9.com/">UFFI</a> compatibility
+  for CLISP <a href="impnotes/dffi.html">FFI</a>
+  (<a href="http://www.informatimago.com/develop/lisp/">Pascal Bourguignon</a>
+  and <a href="http://sourceforge.net/tracker/index.php?func=detail&aid=1028683&group_id=1355&atid=301355">Joerg Hoehle</a>
+  are working on this)<p><br/></p></li`>
  <li>GUI (e.g.,
   <a href="http://sourceforge.net/projects/wxcl/">wxCL</a>)<p><br/></p></li>
  <li><a href="http://www.openssl.org/">SSL</a> bindings (note
