prefer chunked impnotes

--- a/wanted.html
+++ b/wanted.html
@@ -87,7 +87,7 @@ members to recruit new members, with the following incentives:</p>
  <li><a href="http://www.openldap.org/">LDAP</a> and
   <a href="http://developer.gnome.org/doc/API/libgnome/gnome-gnome-config.html"
      >gnome-config</a> support in
-  <a href="impnotes.html#dir-key">modules/dirkey</a><p><br/></p></li>
+  <a href="impnotes/dir-key.html">modules/dirkey</a><p><br/></p></li>
 </ol>
 
 <h3 id="infrastructure">Infrastructure</h3>
