--- a/resources.html
+++ b/resources.html
@@ -370,6 +370,9 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
     <a href="http://ilisp.cons.org/">home</a>]</dt>
   <dd>a comprehensive (X)Emacs interface for an inferior Common Lisp,
    or other Lisp based languages.</dd>
+ <dt><strong>SLIME</strong> - Superior Lisp Interaction Mode for Emacs</dt>
+ <dd><a href="http://common-lisp.net/project/slime/"
+        >http://common-lisp.net/project/slime/</a></dd>
  <dt><strong>MatLisp</strong>
    [<a href="http://sourceforge.net/projects/matlisp">project</a>
     <a href="http://matlisp.sourceforge.net/">home</a>]</dt>
