link to http://www.frank-buss.de/lisp/clab/trunk/clisp/

--- a/resources.html
+++ b/resources.html
@@ -45,6 +45,10 @@
          >http://www.niksula.cs.hut.fi/~tsiivola/clisp-ffi-howto.html</a><br/>
    a short non-authoritative guide to extending CLISP on Debian via
    its FFI and module facilities</dd>
+ <dt><strong>Building a Windows version of CLISP</strong> using MinGW
+  [Frank Buss]</dt>
+ <dd><a href="http://www.frank-buss.de/lisp/clab/trunk/clisp/"
+        >http://www.frank-buss.de/lisp/clab/trunk/clisp/</a></dd>
  <dt><strong>CLISP programming - by a newbie, for newbies</strong>
   [Mark Carter]</dt>
  <dd><a href="http://www.markcarter.me.uk/computing/lisp/lisp.htm"
