--- a/resources.html
+++ b/resources.html
@@ -344,6 +344,11 @@ href="http://slashdot.org/article.pl?sid=01/11/13/0420226&amp;mode=nocomment"
   [<a href="mailto:chew@cs.cornell.edu">Paul Chew</a>]</dt>
  <dd><a href="http://www.cs.cornell.edu/Info/Projects/SimLab/"
         >http://www.cs.cornell.edu/Info/Projects/SimLab/</a></dd>
+ <dt><strong>Pulcinella</strong> - <cite>Propagating Uncertainty through Local
+  Computations</cite> (a Bayesian AI tool)
+  [<a href="mailto:Dr.Pulcinella@iridia.ulb.ac.be">Dr. Pulcinella</a>]</dt>
+ <dd><a href="http://iridia.ulb.ac.be/pulcinella/"
+        >http://iridia.ulb.ac.be/pulcinella/</a></dd>
 </dl>
 
 <p>See also the
