updated for the SF change ViewCVS --> ViewVC

--- a/resources.html
+++ b/resources.html
@@ -78,12 +78,12 @@ the job</a> [<a href="http://www.podval.org/~sds/">Sam Steingold</a>]</p>
 
 <p><a href="http://www.n-a-n-o.com/lisp/cmucl-tutorials/LISP-tutorial.html"
       >Common LISP Hints</a> - also comes with the CLISP distribution
- as <a href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/clisp/clisp/doc/LISP-tutorial.txt?rev=HEAD"><code>doc/LISP-tutorial.txt</code></a>
+ as <a href="http://clisp.cvs.sourceforge.net/*checkout*/clisp/clisp/doc/LISP-tutorial.txt"><code>doc/LISP-tutorial.txt</code></a>
  in plain text format.</p>
 
 <p><a href="http://www.aiai.ed.ac.uk/~jeff/clos-guide.html">A Brief
   Guide to CLOS</a> - also comes with the CLISP distribution
- as <a href="http://cvs.sourceforge.net/viewcvs.py/*checkout*/clisp/clisp/doc/CLOS-guide.txt?rev=HEAD"><code>doc/CLOS-guide.txt</code></a>
+ as <a href="http://clisp.cvs.sourceforge.net/*checkout*/clisp/clisp/doc/CLOS-guide.txt"><code>doc/CLOS-guide.txt</code></a>
  in plain text format.</p>
 
 <p><a href="http://www.pascalcostanza.de/lisp/guide.html">Highly
