--- a/wanted.html
+++ b/wanted.html
@@ -65,10 +65,10 @@ members to recruit new members, with the following incentives:</p>
   volunteer to implement the Matlab C API for Octave and then make sure that
   the CLISP matlab module works with that new Octave C API.<p><br/></p></li>
  <li>multi-threading (see
-  <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/xthread.d"><code>src/xthread.d</code></a>,
-  <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/zthread.d"><code>src/zthread.d</code></a>,
-  <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/src/threads.lisp"><code>src/threads.lisp</code></a>,
-  <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/*checkout*/clisp/clisp/doc/multithread.txt"><code>doc/multithread.txt</code></a>)<p><br/></p></li>
+  <a href="http://clisp.cvs.sourceforge.net/*checkout*/clisp/clisp/src/xthread.d"><code>src/xthread.d</code></a>,
+  <a href="http://clisp.cvs.sourceforge.net/*checkout*/clisp/clisp/src/zthread.d"><code>src/zthread.d</code></a>,
+  <a href="http://clisp.cvs.sourceforge.net/*checkout*/clisp/clisp/src/threads.lisp"><code>src/threads.lisp</code></a>,
+  <a href="http://clisp.cvs.sourceforge.net/*checkout*/clisp/clisp/doc/multithread.txt"><code>doc/multithread.txt</code></a>)<p><br/></p></li>
  <li>native file compilation (e.g., bytecodes&rarr;C)<p><br/></p></li>
  <li>native just-in-time compilation
   (e.g., <a href="http://www.southern-storm.com.au/libjit.html">libjit</a>)
