--- a/summary.html
+++ b/summary.html
@@ -64,7 +64,8 @@ and may be distributed under the terms of
 <a href="http://www.gnu.org/copyleft/gpl.html">GPL</a>.
 You may distribute commercial proprietary applications compiled with
 CLISP, see file
-<a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/~checkout~/clisp/clisp/COPYRIGHT"><code>COPYRIGHT</code></a> in the CLISP distribution.</p>
+<a href="http://clisp.cvs.sourceforge.net/*checkout*/clisp/clisp/COPYRIGHT"
+   ><code>COPYRIGHT</code></a> in the CLISP distribution.</p>
 
 <p>The user interface comes in English, German, French, Spanish,
 Dutch, Russian and Danish, and can be changed at run time.</p>
