--- a/wanted.html
+++ b/wanted.html
@@ -114,6 +114,7 @@ members to recruit new members, with the following incentives:</p>
 <ul>
  <li><a href="http://sourceforge.net/tracker/?group_id=1355&amp;atid=351355"
         >RFEs</a></li>
+ <li><a href="http://sourceforge.net/pm/?group_id=1355">Tasks</a></li>
 </ul>
 
 <hr/>
