--- a/resources.html
+++ b/resources.html
@@ -481,7 +481,7 @@ Applications</a> page at <a href="http://www.lisp.org/">ALU</a>.</p>
      width="125" height="37" alt="[SourceForge Logo]"/></a>
   <a href="http://sourceforge.net/donate/index.php?group_id=1355"><img
      src="http://images.sourceforge.net/images/project-support.jpg"
-     width="88" height="32" border="0" alt="[Support This Project]"/></a></td>
+     width="88" height="32" alt="[Support This Project]"/></a></td>
  <td align="right"><a href="http://validator.w3.org/check/referer"><img
      src="http://www.w3.org/Icons/valid-xhtml10"
      alt="Valid XHTML" height="31" width="88"/></a>
